# cfd-basics

./: .gitmodules  CMakeLists.txt  LICENSE
src/: core.hpp  main.cpp  scripts.hpp  solution.hpp
src/builder/: boundary_field.hpp  cfd_utils.hpp  diffusion.hpp  properties.hpp  system.hpp
src/generator/: boundary_field.hpp  diffusion.hpp  generator.hpp
src/linalg/: gauss_seidel.hpp  tridiag.hpp
src/mesh/: cell.hpp  face.hpp  mesh.hpp  poly_boundary.hpp  poly_mesh.hpp
src/numcal/: integration.hpp
tc1/: TC1_MarcosAugustoBelizario.docx  plot.py  tc1.cpp
tc2/: TC2_MarcosAugustoBelizario.docx  plot.py  plot2.py  referencia.txt  tc2.cpp
tc3/: coef.txt  saida.txt  tc3.cpp
